# butterlog-service

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
docs/: API.md
migrations/: 20260523000000_create_users_table.sql  20260523000001_add_api_token.sql  20260523000002_create_flights_and_screenshots.sql  20260523000003_add_discord_tables.sql  20260523000004_create_allowlisted_channels.sql  20260523000005_add_channels_update_timestamp.sql  20260601000000_create_flight_shares.sql  20260603000000_rotate_api_tokens.sql  20260603000001_add_discord_sync_state.sql  20260604000000_add_flight_notes.sql  20260609000000_multiplayer_peers_and_discord_unique.sql  20260610000000_hashed_api_tokens.sql  20260616000000_multiplayer_peer_local_address.sql  20260617000000_multiplayer_peer_position.sql
src/: auth.rs  config.rs  db.rs  discord.rs  error.rs  handlers.rs  main.rs  r2.rs  templates.rs
templates/: flight_detail.html  flights.html  home.html  map.html  settings.html  share_detail.html
